# sparse_matrix_recovery

./: .gitignore  DEEP_DIVE.md  RALPH.md  RALPH_code.md  RALPH_paper.md  README.md  REVIEW_NOTES.md  STATUS.md  progress.json  pyproject.toml  qsimeon_SparseMatrixRecovery.html  qsimeon_SparseMatrixRecovery.ipynb  ralph.sh  ralph_code.sh  ralph_paper.sh  research_prd.json
experiments/: aggregate_results.py  analysis.py  core.py  run_experiments.py  run_single_rep.py  sweep_config.yaml
experiments/results/: E1_baseline.json  E2_granger.json  E2_sparsity.json  E3_stimulation.json  E4_granger.json  E4_sparsity.json  E5_nonlinearity.json  E6_oracle_crossover.json  E7_sensor_fraction.json  E7_stim_fraction.json  E8_noise.json  lit_review_v2.json  lit_review_v2.md  math_deep_verify.json  math_verification_gpt54.json  sweep_summary.json
experiments/results/archive_2026_04_11/: E1_baseline.json  E3_stimulation.json  E5_nonlinearity.json  E7_stim_fraction.json
notebooks/: complete_analysis.ipynb  explore_dynamics.ipynb  explore_dynamics_executed.ipynb  qsimeon_SparseMatrixRecovery.ipynb
paper/: REVIEW_NOTES.md  lightning_talk.md  main.tex  math_walkthrough.md  poster.tex  presentation.tex  references.bib
scripts/: aggregate_results.py  create_notebook.py  generate_all_figures.py  generate_fig10_oracle.py  launch_E1_scaling.sh  launch_experiments.sh  launch_sweep.sh  launch_wandb_sweep.sh  upload_sweep_to_wandb.py  verify_citations.py
tasks/: todo.md
tools/: gemini_research.py  lit_review_queries_v2.json  math_tasks_gpt54.json  openai_math.py
(+1 files in other folders)
